--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,13 +17,15 @@
     <link rel="manifest" href="favicon/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <meta name="image" content="og.png" />
+    "https://spotify-profile-henriquezani.herokuapp.com/og.png"
+
+    <meta name="image" content="https://spotify-profile-henriquezani.herokuapp.com/og.png" />
     <meta property="og:title" content="Spotify Profile" />
     <meta property="og:description" content="Web app for visualizing personalized Spotify data" />
-    <meta property="og:image" content="og.png" />
+    <meta property="og:image" content="https://spotify-profile-henriquezani.herokuapp.com/og.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="og.png" />
+    <meta name="twitter:image" content="https://spotify-profile-henriquezani.herokuapp.com/og.png" />
     <meta name="twitter:creator" content="@henriquezani_" />
     <meta name="twitter:title" content="Spotify Profile" />
     <meta name="twitter:description" content="Web app for visualizing personalized Spotify data" />
